# voicehand

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/voicehand/: __init__.py  cli.py  models.py  report.py
src/voicehand/commands/: __init__.py  executor.py  macros.py  parser.py
src/voicehand/recognition/: __init__.py  context.py  listener.py  processor.py
tests/: test_benchmark.py  test_core.py  test_executor.py  test_integration.py  test_listener.py  test_macros.py  test_models.py  test_parser.py  test_processor.py
